оптимизация LogAnalyzer